added ratings to driver